Exp2Ipynb functions in Exp2Ipynb folder, pypi package, DecTree direct png in data folder, rename N-Promoter-Prediction to 4-...

--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -39,7 +39,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, make_DataDir, ExpressionScaler, Sequence_Conserved_Adjusted, Insert_row_, ExpressionStrength_HeatMap, df_HeatMaps, ExpressionVariation_HeatMap, Sequence_Ref_DiffSum, Sequence_Dist_DiffSum, generate_distances, ExpressionMean_ttest\n",
+    "from Exp2Ipynb import init_Exp2, Data_Src_Load, make_DataDir, ExpressionScaler, Sequence_Conserved_Adjusted, Insert_row_, ExpressionStrength_HeatMap, df_HeatMaps, ExpressionVariation_HeatMap, Sequence_Ref_DiffSum, Sequence_Dist_DiffSum, generate_distances, ExpressionMean_ttest\n",
     "%matplotlib inline"
    ]
   },
