--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -35,7 +35,7 @@
     "import joblib\n",
     "import pickle\n",
     "from math import sqrt\n",
-    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir, largest_indices\n",
+    "from Exp2Ipynb import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir, largest_indices\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
     "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, plot_confusion_matrix, classification_report, f1_score, matthews_corrcoef\n",
     "from sklearn.tree import export_graphviz\n",
@@ -358,9 +358,11 @@
     "    tree = ML_Best[Measure_Name][20]\n",
     "\n",
     "    # Export the image to a dot file\n",
-    "    export_graphviz(tree, out_file = 'tree.dot', rounded = True, precision = 1)\n",
-    "    (graph, ) = pydot.graph_from_dot_file('tree.dot')\n",
-    "    graph.write_png('tree.png')\n",
+    "    DotData = export_graphviz(tree, rounded = True, precision = 1)\n",
+    "    (graph, ) = pydot.graph_from_dot_data(DotData)\n",
+    "    Fig_ID = 'DecisionTree'\n",
+    "    DecTree_File = os.path.join(Data_Folder, '{}_{}_{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Fig_ID, Y_Col_Name[Meas_Idx].replace(' ','-'), 'png'))\n",
+    "    graph.write_png(DecTree_File)\n",
     "    # MyML.best_estimator_.get_params"
    ]
   }
