fix regression GA

--- a/4-Promoter-Prediction.ipynb
+++ b/4-Promoter-Prediction.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
@@ -134,8 +134,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ExpressGoal = {0:[2]} #{0:[1], 1:[2]}\n",
-    "ExpressFine = {0:[30]} #{0:[.03], 1:[.04]}\n",
+    "ExpressGoal = {0:[.05]} #{0:[1], 1:[2]}\n",
+    "ExpressFine = {0:[.05]} #{0:[.03], 1:[.04]}\n",
     "ReferenceNumber = 2\n",
     "TargetNumber = 3\n",
     "MyFinal = pd.DataFrame({'Idx-Original':[], 'Strain-ID':[], 'Sequence':[], 'target':[]})\n",
